# fel-dolby-vision-movies

./: .codacy.yml  .gitignore  AGENTS.md  CONTEXT.md  FEL.txt  README.md  forums.txt  google_sheets.txt  justfile  links.md  pyproject.toml  raw_fel.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy-pages.yml  pages.yml  (+2 more)
data/: fel_cleanup_report.csv  forums.txt  migration_report.csv  needs_review.json  releases.json  sources_always_fel.txt  sources_needs_evidence.txt  test_source.csv
scripts/: check_public_cache_hits.py  hdencode_import.py  trakt_bootstrap.py
src/: ai_scrape.py  artifacts.py  benchmark.py  bluray.py  build_pages.py  compare.py  dashboard.py  discovery.py  enrich.py  fel_cleanup.py  fel_ingest.py  fetch_reddit.py  fetcher.py  find_urls.py  fix_lines.py  google_sheets.py  list_sources.py  main.py  merge.py  models.py  normalize.py  parse_all_fel.py  parse_and_write.py  parse_movies.py  parser.py  reconcile.py  reddit_source.py  release_delta.py  sources.py  tmdb.py  trakt_sync.py  url_security.py
tests/: conftest.py  test_ai_scrape.py  test_artifacts.py  test_benchmark.py  test_bluray.py  test_build_pages.py  test_compare.py  test_dashboard.py  test_data_integrity.py  test_discovery.py  test_end_to_end.py  test_enrich.py  test_fel_cleanup.py  test_fel_ingest.py  test_fetcher.py  test_google_sheets.py  test_layout.py  test_list_sources.py  test_main.py  test_merge.py  test_models_normalize.py  test_parser.py  test_pr29_fixes.py  test_reconcile.py  test_reddit_source.py  test_release_delta.py  test_root_utilities.py  test_sources.py  test_tmdb.py  test_trakt_sync.py  test_url_security.py  test_workflows.py
(+17 files in other folders)
