[project]
name = "fel-dolby-vision-movies"
version = "0.1.0"
description = "Automated discovery and verification of Dolby Vision Profile 7 FEL Blu-ray releases."
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.12,<5",
    "httpx>=0.27,<1",
    "python-dotenv>=1,<2",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "respx>=0.21,<1",
    "ruff>=0.6,<1",
]

# Flat modules live under src/ and are imported via PYTHONPATH=src, so uv
# manages the dependency environment without installing the project itself.
[tool.uv]
package = false

[tool.coverage.run]
source = ["src"]
branch = false
omit = [
    # Tests import modules directly off PYTHONPATH=src, so the package
    # __init__ is never executed.
    "src/__init__.py",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = false
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
